--- a/src/components/hamburguerMenu/styles.module.scss
+++ b/src/components/hamburguerMenu/styles.module.scss
@@ -1,20 +1,22 @@
 @use 'abstracts' as *;
 
 .backdrop {
-    width: 100vw;
-    height: 100vh;
-    background-color: $color-transparent;
-    backdrop-filter: blur(2px);
-    position: fixed;
-    top:0;
-    left:0;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-end;
+	@media (max-width: 767px) {
+		width: 100vw;
+		height: 100vh;
+		background-color: $color-transparent;
+		backdrop-filter: blur(2px);
+		position: fixed;
+		top:0;
+		left:0;
+		display: flex;
+		align-items: flex-start;
+		justify-content: flex-end;
+	}
 }
 
 .container {
-    @media (max-width: 750px) {
+    @media (max-width: 767px) {
         width: 100vw;
         max-width: 450px;
         height: 100vh;        
@@ -27,7 +29,7 @@
         animation: menuMobileAnimation 1s linear 0s 1 normal none;
     };
 
-    @media (min-width: 751px) {
+    @media (min-width: 767px) {
         display: none;
     };
 };
