--- a/src/components/navButtons/styles.module.scss
+++ b/src/components/navButtons/styles.module.scss
@@ -3,8 +3,32 @@
 .menu {
     display: none;
 
-    @media  (min-width: 768px) {
-        display: flex;        
+    @media  (min-width: 768px) {        
+        display: flex;
+        // gap: 15px;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.menu > a {
+    @media  (min-width: 768px) {                
+        font-weight: 600;
+        font-size: 1.125rem;
+        cursor: pointer;
+        padding: 10px 20px;
+        text-align: center;
+        justify-self: center;
+    }
+}
+
+.menu > a:hover {
+    @media  (min-width: 768px) {        
+        font-weight: 700;        
+        
+        // transform: zoom ease-in;
+        transform: translate(0px, 0px) scale(1.1, 1.1);
+        transition: 200ms linear;
     }
 }
 
