Fix: estilização de positions

--- a/src/components/sizePage/styles.module.scss
+++ b/src/components/sizePage/styles.module.scss
@@ -5,6 +5,9 @@
     min-height: 0.625rem;
     height: 0.625rem;
     background-color: $color-a;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .progress {
