--- a/src/components/hero/styles.module.scss
+++ b/src/components/hero/styles.module.scss
@@ -1,10 +1,13 @@
 @use 'abstracts' as *;
 
 .container {    
-    position: relative;
-    height: 100vh;
+    width: 100vw;
+    height: 90vh;
+    overflow: hidden;
 }
 
 .heroImg {    
     object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
