--- a/src/components/servicesArea/styles.module.scss
+++ b/src/components/servicesArea/styles.module.scss
@@ -2,10 +2,77 @@
 
 .container {
     background-color: $color-c;
-    width: 100%;
+    width: 100%;    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.container > ul {
     padding: 20px 10px;
+    display: flex;
+    gap: 20px;
+    
+    @media  (max-width: 885px) {
+        width: 100%;        
+        overflow-x: scroll;
+    }
+    
+    @media  (min-width: 885px) {
+        max-width: 1559px;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin: 0 auto;
+    }
+    
+}
+
+.container > ul > li {
+    background-color: $color-a;    
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
+
+    @media  (max-width: 884px) {
+        padding: 20px 10px;
+        height: 348px;
+        width: 260px;
+        min-width: 260px;        
+    }
+    
+    @media  (min-width: 885px) {
+        padding: 25px 20px;
+        height: 310px;
+        width: 370px;
+        min-width: 370px;        
+    }
+    
+}
+
+.container > ul > li > h2 {
+    
+    @media  (max-width: 884px) {
+        @include title-style-card-mobile              
+    }
+    
+    @media  (min-width: 885px) {
+        @include title-style-card              
+    }
+}
+
+.container > ul > li > p {
+    @media  (max-width: 884px) {
+        @include text-style-card-mobile
+    }
+    
+    @media  (min-width: 885px) {
+        @include text-style-card              
+    }
 }
